--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" type="text/css" href="mystyle.css">
     <title>
-        B. J. Wiest Painting poop test
+        B. J. Wiest Painting
     </title>
     <link rel="icon" href="images/me1.JPG">
 
