--- a/donate.html
+++ b/donate.html
@@ -16,7 +16,7 @@
     <title>
         B. J. Wiest Painting - Donate
     </title>
-    <link rel="icon" href="images/me1.JPG">
+    <link rel="icon" href="images/IMG_0789-min.jpg">
 
     <script src="app.js"></script>
 
