--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>
         B. J. Wiest Painting
     </title>
-    <link rel="icon" href="images/me1.JPG">
+    <link rel="icon" href="images/IMG_0789-min.jpg">
 
     <script>
         window.onload = function () {
