--- a/aboutContact.html
+++ b/aboutContact.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" type="text/css" href="mystyle.css">
     <title>
-        B. J. Wiest Painting - About & Contact
+        Ben Wiest Painting - About & Contact
     </title>
     <link rel="icon" href="images/IMG_0789-min.jpg">
 
