--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="Find my paintings here.">
-    <meta name="keywords" content="wiest, ben, bj, b. j., painting, bjwiest">
+    <meta name="keywords" content="wiest, ben, bj, Ben, painting, bjwiest">
 
     <link rel="stylesheet" type="text/css" href="mystyle.css">
     <title>
-        B. J. Wiest Painting
+        Ben Wiest Painting
     </title>
     <link rel="icon" href="images/IMG_0789-min.jpg">
 
