--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 </head>
 <div class="topnav">
-    <a href="index.html">Home</a>
+    <a href="index.html">Paintings</a>
     <a href="aboutContact.html">About & Contact</a>
     <a href="donate.html">Donate</a>
 </div>
