--- a/donate.html
+++ b/donate.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" type="text/css" href="mystyle.css">
     <title>
-        Ben Wiest Painting - Donate
+        Ben Wiest Painting ~ Donate
     </title>
     <link rel="icon" href="images/IMG_0789-min.jpg">
 
