--- a/donate.html
+++ b/donate.html
@@ -7,7 +7,7 @@
     <title>
         Ben Wiest Painting ~ Donate
     </title>
-    <link rel="icon" href="images/IMG_0789-min.jpg">
+    <link rel="icon" href="images/IMG_0798-min.JPG">
 
     <script src="app.js"></script>
 
