--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>
         Ben Wiest Painting
     </title>
-    <link rel="icon" href="images/IMG_0789-min.jpg">
+    <link rel="icon" href="images/IMG_0798-min.JPG">
 
     <script>
         window.onload = function () {
