--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
     <h1>
         ~Greetings from Ben Wiest's Website~<br>
-        ~Enjoy Cloud Watching~<br>
+        ~Phosphenes-Pareidolia-Hypnagogic Imagery~<br>
         <img src="images/IMG_0798-min.JPG" loading="lazy" >
         <img src="images/IMG_0800-min.JPG" loading="lazy" >
         <img src="images/IMG_0803-min.JPG" loading="lazy" >
