--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 
 <head>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZLSXR65EYY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZLSXR65EYY');
+</script>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="Find my paintings here.">
