--- a/index.html
+++ b/index.html
@@ -47,32 +47,32 @@
     <h1>
         ~Greetings from Ben Wiest's Website~<br>
         ~Phosphenes-Pareidolia-Hypnagogic Imagery~<br>
-        <img src="images/IMG_0798-min.JPG" loading="lazy" >
-        <img src="images/IMG_0800-min.JPG" loading="lazy" >
-        <img src="images/IMG_0803-min.JPG" loading="lazy" >
-        <img src="images/IMG_0807-min.JPG" loading="lazy" >
+        <img src="images/Batch2/IMG-0798-min.jpg" loading="lazy" >
+        <img src="images/Batch2/IMG-2039-min.jpg" loading="lazy" >
+        <img src="images/Batch2/IMG-2506-min.jpg" loading="lazy" >
+        <img src="images/Batch2/IMG-2510-min.jpg" loading="lazy" >
+        <img src="images/Batch2/IMG-2519-min.jpg" loading="lazy" >
+        <img src="images/Batch2/IMG-2520-min.JPG" loading="lazy" >
+        <img src="images/Batch2/IMG-2523-min.jpg" loading="lazy" >
+        <img src="images/Batch2/IMG-2525-min.jpg" loading="lazy" >
+        <img src="images/Batch2/IMG-2530-min.jpg" loading="lazy" >
+        <img src="images/Batch2/IMG-2531-min.JPG" loading="lazy" >
+        <img src="images/Batch2/IMG-2532-min.jpg" loading="lazy" >
+        <img src="images/Batch2/IMG-2533-min.jpg" loading="lazy" >
         <img src="images/IMG_0835-min.jpg" loading="lazy" >
         <img src="images/IMG_0836-min.jpg" loading="lazy" >
-        <img src="images/IMG_0427-min.JPG" loading="lazy" >
         <img src="images/IMG_0904-min.jpg" loading="lazy" >
-        <img src="images/IMG_1063-min.jpg" loading="lazy" >
-        <img src="images/IMG_1081-min.JPG" loading="lazy" >
-        <img src="images/IMG_1252-min.JPG" loading="lazy" >
-        <img src="images/IMG_1358-min.JPG" loading="lazy" >
-        <img src="images/IMG_1547-min.JPG" loading="lazy" >
-        <img src="images/IMG_1940-min.JPG" loading="lazy" >
-        <img src="images/IMG_2039-min.jpg" loading="lazy" >
         <img src="images/IMG_2133-min.JPG" loading="lazy" >
-        <img src="images/64482784338__845A9F7B-E944-4808-8817-600169AA76C7-min.JPG" loading="lazy" >
-        <img src="images/64551882772__FCFAFCFD-D3E0-4C53-A2D6-BA580632D714-min.JPG" loading="lazy" >
-        <img src="images/64551885842__38B37DCB-F512-4977-9337-570E4BA343AC-min.JPG" loading="lazy" >
-        <img src="images/IMG_0427-min.JPG" loading="lazy" >
-        <img src="images/IMG_0647-min.JPG" loading="lazy" >
-        <img src="images/IMG_0648-min.JPG" loading="lazy" >
-        <img src="images/IMG_0783-min.JPG" loading="lazy" >
+        <img src="images/Batch2/IMG-2535-min.JPG" loading="lazy" >
+        <img src="images/Batch2/IMG-2536-min.jpg" loading="lazy" >
+        <img src="images/Batch2/IMG-2537-min.jpg" loading="lazy" >
+        <img src="images/Batch2/IMG-2540-min.jpg" loading="lazy" >
         <img src="images/IMG_0789-min.jpg" loading="lazy" >
         <img src="images/IMG_0791-min.jpg" loading="lazy" >
-        <img src="images/IMG_0792-min.jpg" loading="lazy" >
+        <img src="images/IMG_0800-min.JPG" loading="lazy" >
+        <img src="images/IMG_0803-min.JPG" loading="lazy" >
+
+
 
     </h1>
     <br>
