--- a/aboutContact.html
+++ b/aboutContact.html
@@ -23,7 +23,7 @@
     <h1>(608)320-9230</h1>
     <h1>benwiest2002@gmail.com</h1>
     <br>
-    <p1>Just a guy from Madison WI 000s</p1>
+    <p1>Just a guy from Madison WI</p1>
     <br>
     <p1>instagr*m: benwiest.paint</p1>
     <br>
