--- a/aboutContact.html
+++ b/aboutContact.html
@@ -22,10 +22,9 @@
 <body>
     <h1>(608)320-9230</h1>
     <h1>benwiest2002@gmail.com</h1>
+    <h1>Instagram: @<a target="_blank" href="https://www.instagram.com/benwiest.paint/">benwiest.paint</a></h1>
     <br>
     <p1>Just a guy from Madison WI</p1>
-    <br>
-    <p1>instagr*m: benwiest.paint</p1>
     <br>
     <p1></p1>
 
