--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
     <h1>
         ~Greetings from Ben Wiest's Website~<br>
         ~Phosphenes-Pareidolia-Hypnagogic Imagery~<br>
+
+        <img src="images/batch3/IMG-2592-min.JPG" loading="lazy" >
+        <img src="images/batch3/IMG-2593-min.JPG" loading="lazy" >
+        <img src="images/batch3/IMG-2594-min.JPG" loading="lazy" >
+        <img src="images/batch3/IMG-2595-min.JPG" loading="lazy" >
+        <img src="images/batch3/IMG-2596-min.JPG" loading="lazy" >
+        <img src="images/batch3/IMG-2597-min.JPG" loading="lazy" >
+        <img src="images/batch3/IMG-2608-min.JPG" loading="lazy" >
+        <img src="images/batch3/IMG-2609-min.JPG" loading="lazy" >
         <img src="images/Batch2/IMG-0798-min.jpg" loading="lazy" >
         <img src="images/Batch2/IMG-2039-min.jpg" loading="lazy" >
         <img src="images/Batch2/IMG-2506-min.jpg" loading="lazy" >
