--- a/donate.html
+++ b/donate.html
@@ -7,7 +7,7 @@
     <title>
         Ben Wiest Painting ~ Donate
     </title>
-    <link rel="icon" href="images/Batch2/IMG-0798-min.jpg">
+    <link rel="icon" href="images/IMG-0798-min.jpg">
 
 
 </head>
