--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <br>
   <div class="footer">
     <button class="redroom" onclick="myFunction()">Red Room</button>
-<button class="redroom" onclick="myFunction1()">Invert</button> <br>
+<button class="redroom" onclick="myFunction1()">Inversion</button> <br>
     <p1>Everything on this site is protected by copyright</p1>
   </div>
   <script src="lightbox2-2.11.3/src/js/lightbox.js"></script>
