--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
         "images/IMG-0798-min.jpg", "images/IMG-2510-min.jpg", "images/IMG-2536-min.jpg", "images/IMG-2609-min.JPG", "images/IMG-2747-min.jpg",
         "images/IMG_0800-min.JPG", "images/IMG-2519-min.jpg", "images/IMG-2537-min.jpg", "images/IMG-2726-min.JPG", "images/IMG-2748-min.jpg",
         "images/IMG_0803-min.JPG", "images/IMG-2520-min.JPG", "images/IMG-2540-min.jpg", "images/IMG-2729-min.JPG", "images/IMG-2749-min.jpg",
-        "images/IMG-0827-min.jpg", "images/IMG-2523-min.jpg", "images/IMG-2592-min.JPG", "images/IMG-2733-min.JPG", "images/IMG-2750-min.jpg",
+        "images/IMG-0827-min.jpg", "images/IMG-2523-min.jpg", "images/IMG-2592-min.JPG", "images/IMG-2750-min.jpg",
         "images/IMG_0835-min.jpg", "images/IMG-2525-min.jpg", "images/IMG-2593-min.JPG", "images/IMG-2734-min.JPG", "images/IMG-2751-min.jpg",
         "images/IMG_0836-min.jpg", "images/IMG-2530-min.jpg", "images/IMG-2594-min.JPG", "images/IMG-2735-min.JPG",
         "images/IMG_0904-min.jpg", "images/IMG-2531-min.JPG", "images/IMG-2595-min.JPG", "images/IMG-2736-min.JPG",
         "images/IMG-2039-min.jpg", "images/IMG-2532-min.jpg", "images/IMG-2596-min.JPG", "images/IMG-2737-min.JPG",
-      "images/IMG-2844-min.JPG",
+        "images/IMG-2844-min.JPG", "images/IMG-2888-min.jpg"
         //add here ^^
       ];
 
