--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <title>
     Ben Wiest Painting
   </title>
-  <link rel="icon" href="images/IMG-0798-min.jpg">
+  <link rel="icon" href="images/IMG_0836-min.jpg">
 
   <script>
     window.onload = function () {
@@ -47,7 +47,7 @@
 
 <body>
   <h1>
-    ~Greetings from Ben Wiest's Website~<br>
+    ~Ben Wiest's Website~<br>
     ~Phosphenes-Pareidolia-Rhythmic-Hypnagogic Imagery~<br>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
