--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         if (count == false) {
           document.getElementById('foo').setAttribute("class", "style1");
           count = true;
-          count1=false;
+          count1 = false;
         } else {
           document.getElementById('foo').setAttribute("class", "style2");
           count = false;
@@ -70,7 +70,7 @@
         if (count1 == false) {
           document.getElementById('foo').setAttribute("class", "style3");
           count1 = true;
-          count=false;
+          count = false;
         } else {
           document.getElementById('foo').setAttribute("class", "style2");
           count = false;
@@ -96,7 +96,7 @@
         "images/IMG_0836-min.jpg", "images/IMG-2530-min.jpg", "images/IMG-2594-min.JPG", "images/IMG-2735-min.JPG",
         "images/IMG_0904-min.jpg", "images/IMG-2531-min.JPG", "images/IMG-2595-min.JPG", "images/IMG-2736-min.JPG",
         "images/IMG-2039-min.jpg", "images/IMG-2532-min.jpg", "images/IMG-2596-min.JPG", "images/IMG-2737-min.JPG",
-        "images/IMG-2844-min.JPG", "images/IMG-2888-min.jpg", "images/IMG-2973-min.JPG"
+        "images/IMG-2844-min.JPG", "images/IMG-2888-min.jpg", "images/IMG-2973-min.JPG", "images/IMG-3096-min.JPG", "images/IMG-3095-min.JPG"
         //add here ^^
       ];
 
@@ -137,7 +137,7 @@
   <br>
   <div class="footer">
     <button class="redroom" onclick="myFunction()">Red Room</button>
-<button class="redroom" onclick="myFunction1()">Inversion</button> <br>
+    <button class="redroom" onclick="myFunction1()">Inversion</button> <br>
     <p1>Everything on this site is protected by copyright</p1>
   </div>
   <script src="lightbox2-2.11.3/src/js/lightbox.js"></script>
