--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
         "images/IMG_0836-min.jpg", "images/IMG-2530-min.jpg", "images/IMG-2594-min.JPG", "images/IMG-2735-min.JPG",
         "images/IMG_0904-min.jpg", "images/IMG-2531-min.JPG", "images/IMG-2595-min.JPG", "images/IMG-2736-min.JPG",
         "images/IMG-2039-min.jpg", "images/IMG-2532-min.jpg", "images/IMG-2596-min.JPG", "images/IMG-2737-min.JPG",
-        "images/IMG-2844-min.JPG", "images/IMG-2888-min.jpg", "images/IMG-2973-min.JPG", "images/IMG-3096-min.JPG", "images/IMG-3095-min.JPG"
+        "images/IMG-2844-min.JPG", "images/IMG-2888-min.jpg", "images/IMG-2973-min.JPG", "images/IMG-3096-min.JPG", "images/IMG-3095-min.JPG",
+        "images/IMG-3124-min.jpg", "images/IMG-3126-min.jpg"
         //add here ^^
       ];
 
