--- a/aboutContact.html
+++ b/aboutContact.html
@@ -24,6 +24,8 @@
     <br>
     <p1>Just a guy from Madison WI</p1>
     <br>
+    <p1>~Phosphenes-Pareidolia-Rhythmic-Hypnagogic Imagery~</p1>
+    <br>
     <p1></p1>
 
 
