--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
   <h1>
     ~Ben Wiest's Website~<br>
-    ~Phosphenes-Pareidolia-Rhythmic-Hypnagogic Imagery~<br>
+    ~m40 brush -> quad collat~<br>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
       var count = false;
