--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
   <h1>
     ~Ben Wiest's Website~<br>
-    ~m40 brush -> quad collat~<br>
+    ~It's a beautiful day to be alive~<br>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
       var count = false;
