--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         "images/IMG_0904-min.jpg", "images/IMG-2531-min.JPG", "images/IMG-2595-min.JPG", "images/IMG-2736-min.JPG",
         "images/IMG-2039-min.jpg", "images/IMG-2532-min.jpg", "images/IMG-2596-min.JPG", "images/IMG-2737-min.JPG",
         "images/IMG-2844-min.JPG", "images/IMG-2888-min.jpg", "images/IMG-2973-min.JPG", "images/IMG-3096-min.JPG", "images/IMG-3095-min.JPG",
-        "images/IMG-3124-min.jpg", "images/IMG-3126-min.jpg", "images/IMG-3284-min.jpg", "images/IMG-5016-min.jpg"
+        "images/IMG-3124-min.jpg", "images/IMG-3126-min.jpg", "images/IMG-3284-min.jpg", "images/IMG-5016-min.jpg", "images/IMG-5051-min.jpg"
         //add here ^^
       ];
 
