--- a/index.html
+++ b/index.html
@@ -28,8 +28,15 @@
       const hash = window.location.hash;// location object has page url components
       // defaults for no match
 
-
+      function everyTime() {
+        console.log(links.length)
+        loadMore();
+        if (!links.length) {
+        clearInterval(myInterval);
     }
+      }
+      var myInterval = setInterval(everyTime, 4500);
+  }
 
   </script>
 
@@ -133,6 +140,7 @@
 
       $loadMore.on("click", loadMore);
       loadMore();
+
     </script>
 
   </h1>
