--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@
       const hash = window.location.hash;// location object has page url components
       // defaults for no match
 
-      //timer loader:
- /*     function everyTime() {
+      function everyTime() {
         loadMore();
         if (!links.length) {
         clearInterval(myInterval);
     }
       }
-      var myInterval = setInterval(everyTime, 4500); */
+      var myInterval = setInterval(everyTime, 5500);
   }
 
   </script>
@@ -113,7 +112,7 @@
       var $loadMore = $("#load");
 
       function loadMore(e) {
-console.log('load more begins')
+
         for (var i = 0; i < 8; i++) {
 
           if (links.length) {
@@ -136,11 +135,6 @@ console.log('load more begins')
 
         }
 
-        if (links.length) {
-          console.log('load more happening inside')
-        loadMore();
-        }
-        console.log('load more ends')
       }
 
       $loadMore.on("click", loadMore);
