--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
       const hash = window.location.hash;// location object has page url components
       // defaults for no match
 
-      function everyTime() {
+      //loads pics every seconds, laggy
+   /*   function everyTime() {
         loadMore();
         if (!links.length) {
         clearInterval(myInterval);
     }
       }
-      var myInterval = setInterval(everyTime, 6000);
+      var myInterval = setInterval(everyTime, 6000); */
   }
 
   </script>
@@ -88,7 +89,7 @@
 
 
     <div class="lightgallery1"></div>
-    <button id="load">Load More</button>
+    <button id="load">More</button>
     <script>
       var links = [
         //add new images to bottom
