--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         "images/IMG-3124-min.jpg", "images/IMG-3126-min.jpg", "images/IMG-3284-min.jpg", "images/IMG-5016-min.jpg", "images/IMG-5051-min.jpg",
         "images/IMG-5066-min (1).JPG", "images/IMG-5114-min.JPG", "images/IMG-5186-min.jpg", "images/image_6487327-min.JPG",
         "images/image_6487327 (1)-min.JPG", "images/IMG_5434-min.jpg", "images/IMG-5471-min.JPG", "images/IMG-5620-min.jpg",
-        "images/IMG-6206-min.JPG"
+        "images/IMG-6206-min.JPG", "images/IMG-6327-min.jpg"
         //add here ^^
       ];
 
